# Helix9_Virtual_Ternary_CPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Virtual Ternary CPU on Windows 11.md  app.hx  baseline_pytorch.py  batch_convert.py  benchmark.py  build.bat  build_gen.bat  demo_language.py  dream_hybrid_hr.ppm  helix9.py  helix_nlp.py  output.ppm  ppm_to_image.py  recon_square.ppm  reproduce_trit_bug.cpp  requirements.txt  run_helix.py  test.ht  test_advanced.hasm  test_advanced.ht  test_binding.py  test_dense_mode.py  test_e2e.hx  test_e2e_io.hasm  test_e2e_io.ht  test_e2e_main.hasm  test_e2e_main.ht  test_e2e_math.hasm  test_e2e_math.ht  test_fail_dup.hasm  test_fail_dup.ht  test_fail_missing.hasm  test_fail_missing.ht  test_hash.hasm  test_hash.ht  test_linker_lib.hasm  (+15 more)
benchmarks/: bench_agent.hasm  bench_agent.ht  bench_base.hasm  bench_base.ht  bench_cog.hasm  bench_cog.ht  bench_vec_hard.hasm  bench_vec_hard.ht  bench_vec_soft.hasm  bench_vec_soft.ht  benchmark_main.cpp
docs/: Helix Phase 6_ Cognitive Computing.md  benchmark_analysis.md  helix_publication_draft.md  research_paper.md  ternary_ai_analysis_20260219.md
docs/ai/: ternary_nn_integration.md
docs/architecture/: alu_spec.md  assembly_spec.md  c_lite_spec.md  design_goals.md  execution_model.md  helix_cognitive_runtime_spec.md  helix_vector_spec.md  isa_spec.md  memory_model.md  register_file.md  system_requirements.md  ternary_spec.md
docs/asm/: encoding_tables.md  helix_binary_format.md  helix_debug.md  helix_linker_plan.md  helix_toolchain_spec_v0.1.md  helixasm_spec.md  relocation_spec.md
docs/benchmarks/: helix_bench_results.csv  helix_benchmark_spec.md
docs/compiler/: helix_python_spec.md
docs/experiments/: pattern_lock_spec.md  seeker_2d_spec.md  seeker_spec.md  swarm_spec.md
examples/: helix_std.py  matrix_demo.hasm  matrix_demo.py
experiments/: seeker.hasm  seeker.ht  seeker.hx  seeker_env.cpp  seeker_metrics.csv  tnn_benchmark.cpp
experiments/nlp/: demo_language.py  rnn_inference.hasm  rnn_inference_merged.hasm
experiments/python/: export_helix.py  export_weights_to_py.py  merge_asm.py  merge_rnn_asm.py  mnist_demo.py  mnist_ternary.pth  mnist_ternary.py  mnist_weights_data.py  ternary_layers.py  ternary_ops.py  test_xor.py
experiments/resonance/: resonance_agent.cpp  resonance_agent.h  resonance_env.cpp  resonance_env.h  resonance_main.cpp
experiments/s2d/: s2d_agent.cpp  s2d_agent.h  s2d_env.cpp  s2d_env.h  s2d_main.cpp
experiments/swarm/: swarm_agent.cpp  swarm_agent.h  swarm_env.cpp  swarm_env.h  swarm_main.cpp
experiments/tnn/: mnist_full.hasm  mnist_inference.hasm  mnist_weights.hasm
src/: assembler.h  bindings.cpp  cognitive_trace.cpp  cognitive_trace.h  cpu.cpp  cpu.h  demo_generative.cpp  demo_learning.cpp  demo_mlp.cpp  emulator.cpp  graphics.cpp  graphics.h  isa.h  memory.cpp  memory.h  neural_net.h  run_model.cpp  soft_float.cpp  soft_float.h  sparse_math.h  test_advanced_memory.cpp  test_ai.cpp  test_alu.cpp  test_asm_exec.cpp  test_asm_suite.cpp  test_cpu.cpp  test_graphics.cpp  test_hash_suite.cpp  test_trace.cpp  trit_word.cpp  trit_word.h  vector_alu.h
src/assembler/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
src/cognitive/: agent.h  reward_engine.cpp  reward_engine.h  scheduler.cpp  scheduler.h  stability_monitor.cpp  stability_monitor.h
src/compiler/: AST.h  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
src/compiler/py/: helix_py_compiler.py
src/compiler/py/tests/: debug_arg.hasm  debug_arg.py  debug_hexdump.py  debug_recursion.hasm  debug_recursion.py  factorial.hasm  factorial.py  intermediate.hasm  intermediate.py  simple.hasm  test_beq.hasm  test_if.hasm  test_if.py  test_matmul.py  test_matrix_ops.py  test_mov.hasm  test_mov_indent.hasm
src/linker/: Linker.cpp  Linker.h  main.cpp
src/runtime/: helix_runtime.hasm  helix_runtime.ht
src/tests/: test_cognitive_runtime.cpp
src/tnn/: graph_optimizer.cpp  graph_optimizer.h  helix_runtime.cpp  helix_runtime.h  helix_runtime_exec.cpp
tests/: CMakeLists.txt  agent_task.hasm  test_3d_matrix.hasm  test_3d_matrix.py  test_cognitive.cpp  test_cognitive_state.hasm  test_cognitive_state.ht  test_cognitive_state.hx  test_copy.hasm  test_fp_neg.hasm  test_matmul_manual.hasm  test_matrix_access.hasm  test_matrix_access.py  test_matrix_init_simple.hasm  test_matrix_init_simple.py  test_mem.hasm  test_multi_agent.cpp  test_print.hasm  test_print.py  test_print_int.hasm  test_print_int.py  test_print_matrix.hasm  test_print_matrix.py  test_print_matrix_debug.hasm  test_runtime.hasm  test_runtime.ht  test_runtime.hx  test_simple_int.hasm  test_sparse.hasm  test_sparse.ht  test_tnn.hasm  test_tnn_runtime.cpp  test_uart.hasm  test_uart_fix.hasm  test_vector.hasm  test_vector.ht
tests/assembly/: test_suite.hasm
tests/compiler/: fibonacci.c  fibonacci.hasm  hardening.c  hardening.hasm  test_ldi.hasm
